# enable_testing()
include_directories(${SIMULATION_INC_DIR}/gtest)

add_subdirectory(BMS_Control_Unit)
add_subdirectory(Charger_Control_Unit)
add_subdirectory(Dashboard)
add_subdirectory(Main_Control_Unit)
add_subdirectory(Scratch)
add_subdirectory(Telemetry_Control_Unit)
add_subdirectory(Wheel_Speed_Unit)